# wenlan-app

./: .gitignore  .wenlan-backend-version  AGENTS.md  README.md  design-qa.md  index.html  package.json  playwright.config.ts  playwright.review.config.ts  pnpm-lock.yaml  vite.config.ts  vite.preview.config.ts  vite.review.config.ts  vitest.config.ts
.claude/: ultrapowers-run.jsonl
app/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.review.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/resources/: com.wenlan.desktop.plist
app/src/: activity.rs  api.rs  config.rs  daemon_start.rs  events.rs  identity_paths.rs  lib.rs  lifecycle.rs  main.rs  mcp_config.rs  plugin_install.rs  remote_access.rs  review.rs  search.rs  state.rs  system_info.rs  tray_health.rs  wire_state.rs
app/src/router/: bundle.rs  intent.rs  mod.rs
app/src/sensor/: mod.rs
app/src/sources/: data_source.rs  local_files.rs  mod.rs  obsidian.rs  sync.rs  uploads.rs
app/src/trigger/: types.rs
app/tests/: sources_integration.rs
app/tests/manual/: tray-lifecycle.md
docs/: review-environment.md  windows-development.md
e2e/: AGENTS.md  graph-rendering.visual.spec.ts  i18n.spec.ts  memory-list.spec.ts  page-draft.visual.spec.ts  review-flavor.review.spec.ts  space-mark.visual.spec.ts  spaces-accessibility.spec.ts  spaces-contract-closure.spec.ts  spaces-failure-closure.spec.ts  spaces-management.spec.ts  spaces-navigation.spec.ts  spaces-navigation.visual.spec.ts  spaces-zh-hans-visual.spec.ts  tauriMock.self-test.spec.ts  tauriMock.ts  wiki-page-delete.spec.ts  wiki-visual.spec.ts
preview/: AGENTS.md  fixtures.ts  index.html  main.tsx
review/: commandCapabilities.ts  shell.ts  tauri-core.ts  tauri-stubs.ts
scripts/: AGENTS.md  dev-all.sh  dev-runtime.sh  dev-runtime.test.ts  download-sidecars.mjs  download-sidecars.test.ts  extract-zip.ps1  open-review-app.mjs  open-review-app.test.ts  postinstall.mjs  postinstall.test.ts  prepare-sidecars.sh  prepare-sidecars.test.ts  prepare-tauri-build-sidecars.sh  release-version-sync.test.ts  resolve-backend-dir.sh  run-tauri.mjs  run-tauri.test.ts  sidecar-lock-consumers.test.ts  sidecar-lock.mjs  sidecar-lock.test.ts  test-platform.test.ts  test-platform.ts  verify-review-bundle.mjs
src/: AGENTS.md  App.test.tsx  App.tsx  cssTokenGuard.test.ts  (+12 more)
(+412 files in other folders)
