[package]
name = "wenlan-app"
version = "0.12.0" # x-release-please-version
edition = "2021"
license = "AGPL-3.0-only"
default-run = "wenlan-app"

[lib]
name = "wenlan_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
closed-core-eval = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-x = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"

# Dev-only: gives Claude Code / MCP clients control over the running app
# (screenshots, DOM, click/type). Excluded from release builds via debug_assertions.
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
plist = "1"
base64 = "0.22"

# File watching
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-full = "0.4"

# HTTP client for wenlan-server daemon
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }
tracing-appender = "0.2"
tracing = "0.1"
dirs = "6"
async-trait = "0.1"
futures = "0.3"
tempfile = "3"

# Screen capture
xcap = "0.8"
image = "0.25"
image-compare = "0.4"
serde_yaml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
raw-window-handle = "0.6"

# Workspace crates
wenlan-types = "0.9.2"
sysinfo = "0.33"
pdf-extract = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
serial_test = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy", "closed-core-eval"))'] }
